--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
     <div class="slide" id="slide1" data-anchor="slide1">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-8" >
+          <div class="col-12 col-md-8">
             <h3>Arcop Associates Private Limited</h3>
             <h4>The Laburnum</h4>
             <p>A self-contained luxury condominium with a mix of town houses, mid-rise apartments and towers. <br>
@@ -14,7 +14,7 @@
             <p class="text-muted">Gurgaon, Haryana</p>
           </div>
           <div class="col-12 col-md-4">
-            <%= image_tag("Construction.png", class: "image") %>
+            <%= image_tag("Construction.png", class: "image construction") %>
           </div>
         </div>
         <div class="row">
@@ -29,9 +29,22 @@
     </div>
     <div class="slide" id="slide2" data-anchor="slide2">
       <div class="container">
-        <div class="row">
-          <h3>Worked as Assistant Architect as part of a team tasked with the design of this project. I played a diversified role and my duties involved co-ordinating architecture with other services such as electrical, HVAC, plumbing and structure.</h3>
-          <p>I was also involved with the details and the working drawings related to all the internal and external finishes.</p>
+        <div class="row tower-image">
+          <div class="col-12 col-md-8 ">
+            <%= image_tag("Laburnum-Block-Scan.jpg", class: "image tower-image") %>
+          </div>
+          <div class="col-12 col-md-4">
+            <%= image_tag("Tower-Block.jpg", class: "image tower-image") %>
+          </div>
+        </div>
+        <div class="row tower-image">
+          <div class="col-12 col-md-7">
+            <%= image_tag("Laburnum-Tower-Scan.jpg", class: "image") %>
+          </div>
+          <div class="col-12 col-md-5 slide2-text">
+            <h4>Worked as Assistant Architect as part of a team tasked with the design of this project. I played a diversified role and my duties involved co-ordinating architecture with other services such as electrical, HVAC, plumbing and structure.</h4>
+            <p>I was also involved with the details and the working drawings related to all the internal and external finishes.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -41,22 +54,35 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-8" >
-        <h1>Birla Corporate Office</h1>
+            <h1>Birla Corporate Office</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="slide" id="slide1" data-anchor="slide4">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-8" >
+            <h1>Birla Corporate Office</h1>
           </div>
         </div>
       </div>
     </div>
   </div>
   <div class="section" id="section3">
-    <div class="slide" id="slide4" data-anchor="slide1">
+    <div class="slide" id="slide1" data-anchor="slide1">
       <h1>Test 1</h1>
     </div>
-    <div class="slide" id="slide5" data-anchor="slide2">
+    <div class="slide" id="slide2" data-anchor="slide2">
       <h1>Test 2</h1>
     </div>
-    <div class="slide" id="slide6" data-anchor="slide3">
+    <div class="slide" id="slide1" data-anchor="slide3">
       <h1>Test 3</h1>
     </div>
   </div>
-  <div class="section" id="section4"><h1>Title 4</h1></div>
+  <div class="section" id="section4">
+    <div class="slide" id=slide2>
+      <h1>Title 4</h1>
+    </div>
+  </div>
 </div>
