--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,54 @@
 <div id="fullpage">
+  <div class="section" id="ewaterpower">
+    <div class="slide" id="slide1" data-anchor="hydropower">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h3>EWaterPower</h3>
+            <h4>Abingdon Project</h4>
+            <p>Venue for large exhibitions and conventions in New Delhi. <br>
+              It has an area of nearly 150 acres, with more than 625,000 metres of exhibition space, being among the biggest exhibition centers in India.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="slide" id="slide2" data-anchor="hydropower-1">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h3>E-WaterPower</h3>
+            <h4>Reading Project</h4>
+            <p>Installation of Archimedes Screw turbines beside Caversham Weir.<br>
+              320MWh of renewable electricity every year, with the Weir being able to generate renewable electricity for 40 years.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="slide" id="slide1" data-anchor="hydropower-2">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h3>E-WaterPower</h3>
+            <h4>Sandford Project</h4>
+            <p>Venue for large exhibitions and conventions in New Delhi. <br>
+              It has an area of nearly 150 acres, with more than 625,000 metres of exhibition space, being among the biggest exhibition centers in India.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="slide" id="slide2" data-anchor="hydropower-3">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h3>E-WaterPower</h3>
+            <h4>Project Name</h4>
+            <p>Venue for large exhibitions and conventions in New Delhi. <br>
+              It has an area of nearly 150 acres, with more than 625,000 metres of exhibition space, being among the biggest exhibition centers in India.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="section" id="section0">
     <div class="slide" id="slide2" data-anchor="ITPOSlide1">
       <div class="container">
@@ -19,7 +69,7 @@
     </div>
     <div class="slide" id="slide1" data-anchor="ITPOSlide2">
       <div class="container">
-        <div class="row">
+        <div class="row text-padding">
           <p>Worked as Senior Assistant Architect with ITPO for 11 years handling large exhibitions.
             Planning and Design of their layouts & approving the third party designs following the Govt. of India norms. </p>
           <p>Organising fairs & designing stalls at national & international levels. Operation & Maintenance of 150 acres of exhibition ground in New Delhi.</p>
