--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,16 +1,17 @@
 <div class="pos-f-t fixed-top">
   <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-dark p-3">
-      <h4><%= link_to 'Home', root_path, class: "text-white"%></h4>
+    <div class="bg-light p-3">
+      <h4 data-menuanchor="ewaterpower"><a href="#project1" class="head">Home</a></h4>
       <h5><%= link_to 'Contact', contacts_index_path, class:"custom"%></h5>
-      <h5 data-menuanchor="section0"><a href="#project1" class="project-link">Project 1</a></h5>
-      <h5 data-menuanchor="section1"><a href="#project2" class="project-link">Project 2</a></h5>
-      <h5 data-menuanchor="section2"><a href="#project3" class="project-link">Project 3</a></h5>
-      <h5 data-menuanchor="section3"><a href="#project4" class="project-link">Project 4</a></h5>
+      <h5 data-menuanchor="ewaterpower"><a href="#project1" class="project-link">Project 1</a></h5>
+      <h5 data-menuanchor="section0"><a href="#project2" class="project-link">Project 2</a></h5>
+      <h5 data-menuanchor="section1"><a href="#project3" class="project-link">Project 3</a></h5>
+      <h5 data-menuanchor="section2"><a href="#project4" class="project-link">Project 4</a></h5>
+      <h5 data-menuanchor="section3"><a href="#project5" class="project-link">Project 4</a></h5>
     </div>
   </div>
-  <nav class="navbar navbar-dark bg-dark" id="navbar">
-    <span class="navbar-brand title-name">VANDANA SHARMA</span>
+  <nav class="navbar navbar-light bg-light" id="navbar">
+    <%= image_tag("logo.png", class: "navbar-brand", width: 66, height: 66) %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
