created partials to allow for specific page editing

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,52 +1,13 @@
 <div id="fullpage">
   <div class="section" id="ewaterpower">
     <div class="slide" id="slide1" data-anchor="hydropower">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h3>EWaterPower</h3>
-            <h4>Abingdon Project</h4>
-            <p>Venue for large exhibitions and conventions in New Delhi. <br>
-              It has an area of nearly 150 acres, with more than 625,000 metres of exhibition space, being among the biggest exhibition centers in India.</p>
-          </div>
-        </div>
-      </div>
+      <%= render('layouts/eWaterPower/slide1') %>
     </div>
     <div class="slide" id="slide2" data-anchor="hydropower-1">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h3>E-WaterPower</h3>
-            <h4>Reading Project</h4>
-            <p>Installation of Archimedes Screw turbines beside Caversham Weir.<br>
-              320MWh of renewable electricity every year, with the Weir being able to generate renewable electricity for 40 years.</p>
-          </div>
-        </div>
-      </div>
+      <%= render('layouts/eWaterPower/slide2') %>
     </div>
     <div class="slide" id="slide1" data-anchor="hydropower-2">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h3>E-WaterPower</h3>
-            <h4>Sandford Project</h4>
-            <p>Venue for large exhibitions and conventions in New Delhi. <br>
-              It has an area of nearly 150 acres, with more than 625,000 metres of exhibition space, being among the biggest exhibition centers in India.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="slide" id="slide2" data-anchor="hydropower-3">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h3>E-WaterPower</h3>
-            <h4>Project Name</h4>
-            <p>Venue for large exhibitions and conventions in New Delhi. <br>
-              It has an area of nearly 150 acres, with more than 625,000 metres of exhibition space, being among the biggest exhibition centers in India.</p>
-          </div>
-        </div>
-      </div>
+      <%= render('layouts/eWaterPower/slide3') %>
     </div>
   </div>
   <div class="section" id="section0">
@@ -162,25 +123,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="section" id="section3">
-    <div class="slide" id="slide1" data-anchor="slide1">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-md-7">
-            <h3>Arcop Associates Private Limited</h3>
-            <h4>Americon Embassy School, New Delhi, India</h4>
-            <p>Insert text here
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="section" id="section4">
-    <div class="slide" id=slide2>
-      <h1>Title 4</h1>
     </div>
   </div>
 </div>
