--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
     </div>
   </div>
   <nav class="navbar navbar-light bg-light" id="navbar">
-    <%= image_tag("logo.png", class: "navbar-brand", width: 66, height: 66) %>
+    <%= image_tag("logo.png", class: "navbar py-0 px-0", width: 66, height: 66) %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
