--- a/app/views/layouts/eWaterPower/_slide1.html.erb
+++ b/app/views/layouts/eWaterPower/_slide1.html.erb
@@ -4,7 +4,7 @@
       <div class="col">
         <h3>eWaterPower</h3>
         <h4>Abingdon Project</h4>
-        <p>Project aimed to install 3 Archimedean screws with power generated forecast to be 100KW.<br>
+        <p class="overide">Project aimed to install 3 Archimedean screws with power generated forecast to be 100KW.<br>
           Planned to power around 200 houses.</p>
       </div>
     </div>
