--- a/app/views/layouts/eWaterPower/_slide3.html.erb
+++ b/app/views/layouts/eWaterPower/_slide3.html.erb
@@ -1,10 +1,60 @@
 <div class="container">
   <div class="row">
-    <div class="col-12 col-md-3">
+    <div class="col-12 col-md-7">
       <h3>eWaterPower</h3>
       <h4>Sandford Project</h4>
       <p>Uses 3 Archimedes screws to generate an estimated 1.6GWh of renewable electricity per year. <br>
         Equivalent demand for 500+ houses, comprising most of Sandford.</p>
+      <div class="row">
+        <div class="col">
+          <figure class="figure">
+            <%= image_tag("Sandford/SitePlan.png", class: "image")%>
+            <figcaption class="figure-caption font-italic text-center">Sandford Site Plan</figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+        <figure class="figure">
+          <%= image_tag("Sandford/FishPass.png", class: "image") %>
+          <figcaption class="figure-caption font-italic text-center">Sandford Fish Pass</figcaption>
+        </figure>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-5">
+      <div class="row">
+        <div class="col">
+        <figure class="figure">
+          <%= image_tag("Sandford/SandfordWeir.jpg", class: "image")%>
+          <figcaption class="figure-caption font-italic text-center">Sandford Weir (During Development)</figcaption>
+        </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+        <figure class="figure">
+          <%= image_tag("Sandford/Weir3.jpg", class: "image") %>
+          <figcaption class="figure-caption font-italic text-center">Sandford Weir (Pre-Development)</figcaption>
+        </figure>
+        </div>
+      </div>
     </div>
   </div>
+<!--  <div class="row">-->
+<!--    <div class="col-12 col-md-8">-->
+<!--      <figure class="figure">-->
+        <%#= image_tag("Sandford/FishPass.png", class: "image") %>
+<!--        <figcaption class="figure-caption font-italic text-center">Sandford Fish Pass</figcaption>-->
+<!--      </figure>-->
+<!--    </div>-->
+<!--    <div class="col-12 col-md-4">-->
+<!--      <div class="container">-->
+<!--        <div class="row">-->
+
+<!--        </div>-->
+
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
 </div>
