--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,17 @@
 <div id="fullpage">
+  <div class="section" id="Azam">
+    <div class="slide" id="slide1" data-anchor="pBoro">
+      <%= render('layouts/SpaceQStudios/Peterborough/slide1') %>
+    </div>
+    <div class="slide" id="slide2" data-anchor="pBoro2">
+      <%= render('layouts/SpaceQStudios/Peterborough/slide2') %>
+    </div>
+  </div>
+  <div class="section" id="spaceQhouse">
+    <div class="slide" id="slide2" data-anchor="spaceQ1">
+      <%= render('layouts/SpaceQStudios/Elavation/slide1') %>
+    </div>
+  </div>
   <div class="section" id="ewaterpower">
     <div class="slide" id="slide1" data-anchor="hydropower">
       <%= render('layouts/eWaterPower/slide1') %>
@@ -12,117 +25,23 @@
   </div>
   <div class="section" id="section0">
     <div class="slide" id="slide2" data-anchor="ITPOSlide1">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h3>Indian Trade Promotion Organisation</h3>
-            <h4>Pragati Maidan</h4>
-            <p>Venue for large exhibitions and conventions in New Delhi. <br>
-              It has an area of nearly 150 acres, with more than 625,000 metres of exhibition space, being among the biggest exhibition centers in India.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <%= image_tag("Pragati-Maidan.png", class: "image move-up") %>
-          </div>
-        </div>
-      </div>
+      <%= render('layouts/ITPO/slide1') %>
     </div>
     <div class="slide" id="slide1" data-anchor="ITPOSlide2">
-      <div class="container">
-        <div class="row text-padding">
-          <p>Worked as Senior Assistant Architect with ITPO for 11 years handling large exhibitions.
-            Planning and Design of their layouts & approving the third party designs following the Govt. of India norms. </p>
-          <p>Organising fairs & designing stalls at national & international levels. Operation & Maintenance of 150 acres of exhibition ground in New Delhi.</p>
-          <p>Worked with team in designing and planning of exhibitions halls 8-11 and the development of surroundings such as restaurants and landscapes.</p>
-        </div>
-      </div>
+      <%= render('layouts/ITPO/slide2') %>
     </div>
   </div>
   <div class="section" id="section1">
     <div class="slide" id="slide1" data-anchor="slide1">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-md-8">
-            <h3>Arcop Associates Private Limited</h3>
-            <h4>The Laburnum</h4>
-            <p>A self-contained luxury condominium with a mix of town houses, mid-rise apartments and towers. <br>
-            Facilities include full power backup, recreational facilities including squash courts, swimming pool, golf, health club, etc.</p>
-            <p class="font-italic">Completed in 1999<br>
-            Client: Landbase India Pvt. Ltd.<br>
-            Cost: INR. 1.3 Billion<br>
-            <p class="text-muted">Gurgaon, Haryana</p>
-          </div>
-          <div class="col-12 col-md-4">
-            <%= image_tag("Construction.png", class: "image construction") %>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col fit-right">
-            <%= image_tag("Photo1.jpg", class: "image1", style: "margin-top: 0.5rem")%>
-          </div>
-          <div class="col fit-left">
-            <%= image_tag("Photo.jpg", class: "image2", style: "margin-top: 0.5rem") %>
-          </div>
-        </div>
-      </div>
+      <%= render('layouts/Laburnum/slide1') %>
     </div>
     <div class="slide" id="slide2" data-anchor="slide2">
-      <div class="container">
-        <div class="row tower-image">
-            <div class="col-12 col-md-4 slide2-text">
-              <p>Worked as an Assistant Architect as part of a team tasked with the design of this project.</p>
-              <p>I played a diversified role and my duties involved co-ordinating architecture with other services such as electrical, HVAC, plumbing and structure.</p>
-              <p>I was also involved with the details and the working drawings related to all the internal and external finishes.</p>
-              <p class="text-muted">The following images display the drawings for the entire complex as well as for a specific tower block.</p>
-          </div>
-          <div class="col-12 col-md-8">
-            <%= image_tag("Laburnum-Tower-Scan.jpg", class: "image move-left") %>
-          </div>
-        </div>
-        <div class="row tower-image">
-          <div class="col-12 col-md-8 ">
-            <%= image_tag("Laburnum-Block-Scan.jpg", class: "image tower-image move-right space") %>
-          </div>
-          <div class="col-12 col-md-4">
-            <%= image_tag("Tower-Block.jpg", class: "image tower-image move-left space") %>
-          </div>
-        </div>
-      </div>
+      <%= render('layouts/Laburnum/slide2') %>
     </div>
   </div>
   <div class="section" id="section2">
     <div class="slide" id="slide2" data-anchor="slide3">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-md-7">
-            <h3>Arcop Associates Private Limited</h3>
-            <h4>Birla Corporate Office Building</h4>
-            <p>Multi-storied office building with a 3 level basement for parking and plant rooms. <br>
-            State-of-the-art facilities for building support systems and communication.
-            </p>
-          </div>
-          <div class="col-12 col-md-5">
-            <p class="font-italic">Completed in 1999<br>
-              Client: NEI Properties Ltd. (a subsidiary of the Birla Group of Companies)<br>
-              Cost: INR. 325 Million<br>
-            <p class="text-muted">New Delhi, India<br>
-              In Collaboration: Le Group Arcop, Montreal, Canada
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col" style="bottom: 1rem">
-            <%= image_tag("corporate-office-interior.png", class: 'image move-up') %>
-          </div>
-          <div class="col" >
-            <%= image_tag("Corporate-Office.png", class: "image move-up") %>
-          </div>
-          <div class="col">
-            <%= image_tag("corporate-office-exterior.png", class: "image move-up") %>>
-          </div>
-        </div>
-      </div>
+      <%= render('layouts/BirlaOffice/slide1') %>
     </div>
   </div>
 </div>
