Readme.md updated with clear instructions

--- a/app/views/layouts/SpaceQStudios/Peterborough/_slide1.html.erb
+++ b/app/views/layouts/SpaceQStudios/Peterborough/_slide1.html.erb
@@ -14,7 +14,7 @@
     <div class="col-12 col-md-8 mb-1">
       <div class="figure">
         <%= image_tag("Azam/PBoroFront.png", class: "image") %>
-        <figcaption class="figcaption text-center font-italic">Peterborough Energy Plant Entry and Exit Elavation Views</figcaption>
+        <figcaption class="figcaption text-center font-italic">Peterborough Energy Plant Entry <br>and Exit Elavation Views</figcaption>
       </div>
     </div>
   </div>
