--- a/app/views/layouts/SpaceQStudios/Elavation/_slide1.html.erb
+++ b/app/views/layouts/SpaceQStudios/Elavation/_slide1.html.erb
@@ -14,7 +14,7 @@
         <div class="col">
           <div class="figure">
             <%= image_tag("Azam/Earley-proposed-rearSide.png", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">Rear and Side Extension Floor Plan for 10 Moor Close</figcaption>
+            <figcaption class="figcaption text-center text-white font-italic">Rear and Side Extension Floor Plan for 10 Moor Copse Close</figcaption>
           </div>
         </div>
       </div>
