--- a/app/views/layouts/BirlaOffice/_slide1.html.erb
+++ b/app/views/layouts/BirlaOffice/_slide1.html.erb
@@ -18,13 +18,22 @@
   </div>
   <div class="row">
     <div class="col" style="bottom: 1rem">
+      <figure class="figure">
       <%= image_tag("corporate-office-interior.png", class: 'image move-up') %>
+      <figcaption class="figcaption text-center text-white font-italic">Office view via main corridor</figcaption>
+      </figure>
     </div>
     <div class="col" >
+      <figure class="figure">
       <%= image_tag("Corporate-Office.png", class: "image move-up") %>
+      <figcaption class="figcaption text-center text-white font-italic">Office view via main entrance</figcaption>
+      </figure>
     </div>
     <div class="col">
-      <%= image_tag("corporate-office-exterior.png", class: "image move-up") %>>
+      <figure class="figure">
+      <%= image_tag("corporate-office-exterior.png", class: "image move-up") %>
+      <figcaption class="figcaption text-center text-white font-italic">Office view via main entrance</figcaption>
+      </figure>
     </div>
   </div>
 </div>
