--- a/app/views/layouts/ITPO/_slide1.html.erb
+++ b/app/views/layouts/ITPO/_slide1.html.erb
@@ -1,15 +1,36 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-12 col-md-6">
       <h3>Indian Trade Promotion Organisation</h3>
       <h4>Pragati Maidan</h4>
-      <p>Venue for large exhibitions and conventions in New Delhi. <br>
-        It has an area of nearly 150 acres, with more than 625,000 metres of exhibition space, being among the biggest exhibition centers in India.</p>
+      <p>Venue for large exhibitions and conventions in New Delhi. It has an area of nearly 150 acres, with more than 625,000 metres of exhibition space, being among the biggest exhibition centers in India.</p>
+      <p>Worked as Senior Assistant Architect with ITPO for 11 years handling large exhibitions.
+        Planning and Design of their layouts & approving the third party designs following the Govt. of India norms. </p>
+      <p>Organising fairs & designing stalls at national & international levels. Operation & Maintenance of 150 acres of exhibition ground in New Delhi.</p>
+      <p>Worked with team in designing and planning of exhibitions halls 8-11 and the development of surroundings such as restaurants and landscapes.</p>
+      <div class="row">
+        <div class="col">
+          <figure class="figure">
+            <%= image_tag("ITPO/Halls 8-11.png", class: "image") %>
+            <figcaption class="figcaption text-white text-center font-italic">Halls 8-11 Plan</figcaption>
+          </figure>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-6">
+      <div class="row">
+        <div class="col">
+          <figure class="figure">
+            <%= image_tag("ITPO/Layout-Plan.png", class: "image") %>
+            <figcaption class="figcaption text-white text-center font-italic">Pragati Maidan Layout Plan</figcaption>
+          </figure>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
     <div class="col">
-      <%= image_tag("Pragati-Maidan.png", class: "image move-up") %>
+      <%#= image_tag("Pragati-Maidan.png", class: "image move-up") %>
     </div>
   </div>
 </div>
