--- a/app/views/layouts/Laburnum/_slide2.html.erb
+++ b/app/views/layouts/Laburnum/_slide2.html.erb
@@ -8,14 +8,17 @@
     </div>
     <div class="col-12 col-md-8">
       <%= image_tag("Laburnum-Tower-Scan.jpg", class: "image move-left") %>
+      <figcaption class="figcaption text-center text-white font-italic">Tower Block D Interior</figcaption>
     </div>
   </div>
   <div class="row tower-image">
     <div class="col-12 col-md-8 ">
       <%= image_tag("Laburnum-Block-Scan.jpg", class: "image tower-image move-right space") %>
+      <figcaption class="figcaption text-center text-white font-italic space">Laburnum Complex Plan</figcaption>
     </div>
     <div class="col-12 col-md-4">
       <%= image_tag("Tower-Block.jpg", class: "image tower-image move-left space") %>
+      <figcaption class="figcaption text-center text-white font-italic space">Tower Block D</figcaption>
     </div>
   </div>
 </div>
