--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%= javascript_include_tag 'application'%>
     <%#= stylesheet_link_tag 'fullpage' %>
     <%#= javascript_include_tag 'fullpage' %>
+
+    <%= render 'application/favicon' %>
   </head>
 
   <body>
