--- a/app/views/layouts/eWaterPower/_slide2.html.erb
+++ b/app/views/layouts/eWaterPower/_slide2.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-12 col-md-6">
+    <div class="col-12 col-md-7">
       <h3>eWaterPower</h3>
       <h4>Reading Project</h4>
       <p>Installation of Archimedes Screw turbines beside Caversham Weir.<br>
@@ -9,7 +9,7 @@
         <div class="col-12 col-md-8">
           <figure class="figure">
             <%= image_tag("Reading/Site-Plan.png", class: "image")%>
-            <figcaption class="figure-caption font-italic text-center">Site Plan</figcaption>
+            <figcaption class="figure-caption font-italic text-white text-center">Site Plan</figcaption>
           </figure>
         </div>
         <div class="col-12 col-md-4">
@@ -17,11 +17,11 @@
             <div class="row">
               <figure class="figure">
                 <%= image_tag("Reading/Fishpass3d.png", class: "image")%>
-                <figcaption class="figure-caption font-italic text-center">Fish Pass 3d View</figcaption>
+                <figcaption class="figure-caption font-italic text-white text-center">Fish Pass 3d View</figcaption>
               </figure>
               <figure class="figure">
                 <%= image_tag("Reading/Fishpassplan.png", class: "image")%>
-                <figcaption class="figure-caption font-italic text-center">Fish Pass Plan View</figcaption>
+                <figcaption class="figure-caption font-italic text-white text-center">Fish Pass Plan View</figcaption>
               </figure>
             </div>
           </div>
@@ -31,30 +31,29 @@
         <div class="row">
           <figure class="figure">
             <%= image_tag("Reading/Reading-stock.jpg", class: "image")%>
-            <figcaption class="figure-caption font-italic text-center">Caversham Wier</figcaption>
+            <figcaption class="figure-caption font-italic text-white text-center">Caversham Wier</figcaption>
           </figure>
         </div>
       </div>
     </div>
-    <div class="col-12 col-md-1"></div>
-    <div class="col-12 col-md-4 float-right">
+    <div class="col-12 col-md-5 float-right">
       <div class="container">
         <div class="row">
           <figure class="figure">
             <%= image_tag("Reading/BrushDownstreamEntrance.png", class: "image")%>
-            <figcaption class="figure-caption font-italic text-center">Brush Downstream Entrance</figcaption>
+            <figcaption class="figure-caption font-italic text-white text-center">Brush Downstream Entrance</figcaption>
           </figure>
         </div>
         <div class="row">
           <figure class="figure">
             <%= image_tag("Reading/BrushDownstreamPlanSection.png", class: "image")%>
-            <figcaption class="figure-caption font-italic text-center">Brush Downstream Entrance Plan View</figcaption>
+            <figcaption class="figure-caption font-italic text-white text-center">Brush Downstream Entrance Plan View</figcaption>
           </figure>
         </div>
         <div class="row">
           <figure class="figure">
             <%= image_tag("Reading/Topo3D.png", class: "image")%>
-            <figcaption class="figure-caption font-italic text-center">Topographical 3D View</figcaption>
+            <figcaption class="figure-caption font-italic text-white text-center">Topographical 3D View</figcaption>
           </figure>
         </div>
       </div>
