--- a/app/views/layouts/eWaterPower/_slide3.html.erb
+++ b/app/views/layouts/eWaterPower/_slide3.html.erb
@@ -4,7 +4,8 @@
       <h3>eWaterPower</h3>
       <h4>Sandford Project</h4>
       <p>Uses 3 Archimedes screws to generate an estimated 1.6GWh of renewable electricity per year. <br>
-        Equivalent demand for 500+ houses, comprising most of Sandford.</p>
+        Equivalent demand for 500+ houses, comprising most of Sandford. <br>
+        The interesting part of hydropower is the specially designed system of a fish pass to allow fish to safely pass the Archimedes screws.</p>
       <div class="row">
         <div class="col">
           <figure class="figure">
@@ -15,14 +16,14 @@
       </div>
       <div class="row">
         <div class="col">
-        <figure class="figure">
-          <%= image_tag("Sandford/FishPass.png", class: "image") %>
-          <figcaption class="figure-caption font-italic text-center">Sandford Fish Pass</figcaption>
-        </figure>
+          <figure class="figure">
+            <%= image_tag("Sandford/Weir3.jpg", class: "image") %>
+            <figcaption class="figure-caption font-italic text-center">Sandford Weir (Pre-Development)</figcaption>
+          </figure>
         </div>
       </div>
     </div>
-    <div class="col-12 col-md-5">
+    <div class="col-12 col-md-5 mt-1">
       <div class="row">
         <div class="col">
         <figure class="figure">
@@ -33,10 +34,18 @@
       </div>
       <div class="row">
         <div class="col">
-        <figure class="figure">
-          <%= image_tag("Sandford/Weir3.jpg", class: "image") %>
-          <figcaption class="figure-caption font-italic text-center">Sandford Weir (Pre-Development)</figcaption>
-        </figure>
+          <figure class="figure">
+            <%= image_tag("Sandford/FishPass.png", class: "image") %>
+            <figcaption class="figure-caption font-italic text-center">Sandford Fish Pass</figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <figure class="figure">
+            <%= image_tag('Sandford/SandfordBrushBaffle.png', class: "image") %>
+            <figcaption class="figure-caption font-italic text-center">Brush Baffle Lariner Pass</figcaption>
+          </figure>
         </div>
       </div>
     </div>
