--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,10 +69,10 @@ body {
 }
 
 .project-link{
-  color: #666666;
+  color: white;
   &:hover {
-    color: white;
-    transition: 0.8s;
+    color: lightyellow;
+    transition: 0.3s;
   }
 }
 
@@ -95,3 +95,32 @@ body {
   top: -82px;
 }
 
+.fp-controlArrow.fp-prev {
+  left:2rem;
+  background: url(return.svg) no-repeat;
+  mix-blend-mode: darken;
+  transition: all .3s ease-in-out;
+  &:hover {
+    transform: scale(1.3);
+  }
+
+}
+.fp-controlArrow.fp-next {
+  right:2rem;
+  background: url(next.svg) no-repeat;
+  mix-blend-mode: darken;
+  transition: all .3s ease-in-out;
+  &:hover {
+    transform: scale(1.3);
+  }
+}
+
+@media only screen and (max-width: 1026px) {
+  .fp-controlArrow.fp-prev {
+    display: none;
+
+  }
+  .fp-controlArrow.fp-next {
+    display: none;
+  }
+}
