--- a/app/views/layouts/Laburnum/_slide1.html.erb
+++ b/app/views/layouts/Laburnum/_slide1.html.erb
@@ -12,14 +12,17 @@
     </div>
     <div class="col-12 col-md-4">
       <%= image_tag("Construction.png", class: "image construction") %>
+      <figcaption class="figcaption text-center font-italic">Tower block during development</figcaption>
     </div>
   </div>
   <div class="row">
     <div class="col fit-right">
       <%= image_tag("Photo1.jpg", class: "image1", style: "margin-top: 0.5rem")%>
+      <figcaption class="figcaption text-center font-italic">Completed Apartment Block</figcaption>
     </div>
     <div class="col fit-left">
       <%= image_tag("Photo.jpg", class: "image2", style: "margin-top: 0.5rem") %>
+      <figcaption class="figcaption text-center font-italic">Completed Block of Villas</figcaption>
     </div>
   </div>
 </div>
