--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,26 @@
 <div id="fullpage">
+  <div class="section" id="VSDesign">
+    <div class="slide" id="slide1" data-anchor="VS0">
+      <%= render('layouts/VSDesign/44 Hawlkingcroft/slide1') %>
+    </div>
+    <div class="slide" id="slide2" data-anchor="VS0_1">
+      <%= render('layouts/VSDesign/44 Hawlkingcroft/slide2') %>
+    </div>
+    <div class="slide" id="slide1" data-anchor="VS0_2">
+      <%= render('layouts/VSDesign/44 Hawlkingcroft/slide3') %>
+    </div>
+  </div>
+  <div class="section" id="VSDesign1">
+    <div class="slide" id="slide2" data-anchor="VS1">
+      <%= render('layouts/VSDesign/62 Halkingcroft/slide1') %>
+    </div>
+    <div class="slide" id="slide1" data-anchor="VSslide2">
+      <%= render('layouts/VSDesign/62 Halkingcroft/slide2') %>
+    </div>
+    <div class="slide" id="slide2" data-anchor="VSslide3">
+      <%= render('layouts/VSDesign/62 Halkingcroft/slide3') %>
+    </div>
+  </div>
   <div class="section" id="Azam">
     <div class="slide" id="slide1" data-anchor="pBoro">
       <%= render('layouts/SpaceQStudios/Peterborough/slide1') %>
@@ -14,28 +36,26 @@
   </div>
   <div class="section" id="ewaterpower">
     <div class="slide" id="slide1" data-anchor="hydropower">
-      <%= render('layouts/eWaterPower/slide1') %>
+      <%= render('layouts/eWaterPower/slide3') %>
+
     </div>
     <div class="slide" id="slide2" data-anchor="hydropower-1">
       <%= render('layouts/eWaterPower/slide2') %>
     </div>
     <div class="slide" id="slide1" data-anchor="hydropower-2">
-      <%= render('layouts/eWaterPower/slide3') %>
+      <%= render('layouts/eWaterPower/slide1') %>
     </div>
   </div>
   <div class="section" id="section0">
     <div class="slide" id="slide2" data-anchor="ITPOSlide1">
       <%= render('layouts/ITPO/slide1') %>
     </div>
-    <div class="slide" id="slide1" data-anchor="ITPOSlide2">
-      <%= render('layouts/ITPO/slide2') %>
-    </div>
   </div>
   <div class="section" id="section1">
-    <div class="slide" id="slide1" data-anchor="slide1">
+    <div class="slide" id="slide1" data-anchor="laburnum1">
       <%= render('layouts/Laburnum/slide1') %>
     </div>
-    <div class="slide" id="slide2" data-anchor="slide2">
+    <div class="slide" id="slide2" data-anchor="laburnum2">
       <%= render('layouts/Laburnum/slide2') %>
     </div>
   </div>
