--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,46 @@
 <div id="fullpage">
+  <div class="section" id="aboutMe">
+    <div class="slide" id="slide1" data-anchor="Home">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-2">
+            <figure class="figure float-left mt-2">
+              <%= image_tag("me.png", class: "image") %>
+            </figure>
+          </div>
+          <div class="col-12 col-md-10 px-0">
+            <div class="container">
+              <div class="row">
+                <div class="col mt-2">
+                  <h5 class="float-left"><i class="fas fa-phone"></i> 07515478431</h5>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h5 class="float-left"><i class="fas fa-envelope"></i> vandy18@gmail.com</h5>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h5 class="float-left"><i class="fab fa-linkedin"></i> <%= link_to "Vandana Sharma", "https://www.linkedin.com/in/vandana-sharma-a5213558", class: "btn-custom" %></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <h1>Vandana Sharma</h1>
+            <h4 class="font-italic">Dip Arch, B.Arch, Associate of Indian Institute of Architecture</h4>
+            <hr>
+            <p>I have over 22 years of experience in the field of architecture and have worked with a number of architectural firms in India and UK. During my career I have worked on a variety of projects,
+              ranging from large scale luxury housing to renewable energy plants abd gave gained expertise in designing a vast variety of commercial and residential projects. My role as the Director of my own company VSDesignSolutions
+              for the past year has also given me an insight into the managerial side of the workplace, showing me the various steps needed to be taken when approaching councils for planning permission. The following pages should help to showcase my talents.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="section" id="VSDesign">
     <div class="slide" id="slide1" data-anchor="VS0">
       <%= render('layouts/VSDesign/44 Hawlkingcroft/slide1') %>
