minor production changes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div id="fullpage">
-  <div class="section" id="aboutMe">
+  <div class="section fp-auto-height-responsive" id="aboutMe">
     <div class="slide" id="slide1" data-anchor="Home">
       <div class="container">
         <div class="row">
@@ -41,7 +41,7 @@
       </div>
     </div>
   </div>
-  <div class="section" id="VSDesign">
+  <div class="section fp-auto-height-responsive" id="VSDesign">
     <div class="slide" id="slide1" data-anchor="VS0">
       <%= render('layouts/VSDesign/44 Hawlkingcroft/slide1') %>
     </div>
@@ -52,7 +52,7 @@
       <%= render('layouts/VSDesign/44 Hawlkingcroft/slide3') %>
     </div>
   </div>
-  <div class="section" id="VSDesign1">
+  <div class="section fp-auto-height-responsive" id="VSDesign1">
     <div class="slide" id="slide2" data-anchor="VS1">
       <%= render('layouts/VSDesign/62 Halkingcroft/slide1') %>
     </div>
@@ -63,7 +63,7 @@
       <%= render('layouts/VSDesign/62 Halkingcroft/slide3') %>
     </div>
   </div>
-  <div class="section" id="Azam">
+  <div class="section fp-auto-height-responsive" id="Azam">
     <div class="slide" id="slide1" data-anchor="pBoro">
       <%= render('layouts/SpaceQStudios/Peterborough/slide1') %>
     </div>
@@ -71,29 +71,29 @@
       <%= render('layouts/SpaceQStudios/Peterborough/slide2') %>
     </div>
   </div>
-  <div class="section" id="spaceQhouse">
+  <div class="section fp-auto-height-responsive" id="spaceQhouse">
     <div class="slide" id="slide2" data-anchor="spaceQ1">
       <%= render('layouts/SpaceQStudios/Elavation/slide1') %>
     </div>
   </div>
-  <div class="section" id="ewaterpower">
+  <div class="section fp-auto-height-responsive" id="ewaterpower">
     <div class="slide" id="slide1" data-anchor="hydropower">
       <%= render('layouts/eWaterPower/slide3') %>
 
     </div>
-    <div class="slide" id="slide2" data-anchor="hydropower-1">
+    <div class="slide " id="slide2" data-anchor="hydropower-1">
       <%= render('layouts/eWaterPower/slide2') %>
     </div>
     <div class="slide" id="slide1" data-anchor="hydropower-2">
       <%= render('layouts/eWaterPower/slide1') %>
     </div>
   </div>
-  <div class="section" id="section0">
+  <div class="section fp-auto-height-responsive" id="section0">
     <div class="slide" id="slide2" data-anchor="ITPOSlide1">
       <%= render('layouts/ITPO/slide1') %>
     </div>
   </div>
-  <div class="section" id="section1">
+  <div class="section fp-auto-height-responsive" id="section1">
     <div class="slide" id="slide1" data-anchor="laburnum1">
       <%= render('layouts/Laburnum/slide1') %>
     </div>
@@ -101,7 +101,7 @@
       <%= render('layouts/Laburnum/slide2') %>
     </div>
   </div>
-  <div class="section" id="section2">
+  <div class="section fp-auto-height-responsive" id="section2">
     <div class="slide" id="slide2" data-anchor="slide3">
       <%= render('layouts/BirlaOffice/slide1') %>
     </div>
