--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,11 +17,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 @import "bootstrap";
 //@import "fullpage.js/dist/fullpage.css";
-@import "static_pages";
 @import "extend_fix/framework_and_overrides";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "fullpage";
+@import "static_pages";
 
 $font: 'Architects Daughter', cursive;
 
@@ -124,8 +124,7 @@ body {
 
 .fp-controlArrow.fp-prev {
   left:2rem;
-  background: url(return.svg) no-repeat;
-  mix-blend-mode: darken;
+  background: image_url("return.svg") no-repeat;
   transition: all .3s ease-in-out;
   &:hover {
     transform: scale(1.3);
@@ -134,8 +133,7 @@ body {
 }
 .fp-controlArrow.fp-next {
   right:2rem;
-  background: url(next.svg) no-repeat;
-  mix-blend-mode: darken;
+  background: image_url("next.svg") no-repeat;
   transition: all .3s ease-in-out;
   &:hover {
     transform: scale(1.3);
