--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,8 +1,8 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
-$font: 'Architects Daughter', cursive;
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+$font: 'Quicksand', sans-serif;
 
 h1 {
   color: #000000;
