--- a/app/views/layouts/SpaceQStudios/Elavation/_slide1.html.erb
+++ b/app/views/layouts/SpaceQStudios/Elavation/_slide1.html.erb
@@ -8,7 +8,7 @@
         <div class="col">
           <div class="figure">
             <%= image_tag("Azam/earleyOutdoorElavation.png", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">Rear and Side Extension for 10 Moor Copse Close</figcaption>
+            <figcaption class="figcaption text-center text-white font-italic">Rear and Side Elevation Plan for 10 Moor Copse Close</figcaption>
           </div>
         </div>
         <div class="col">
