--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,10 +2,8 @@
   <div class="collapse" id="navbarToggleExternalContent">
     <div class="bg-dark p-3">
       <h4 data-menuanchor="VS0"><a href="#home" class="head">Home</a></h4>
-      <li class="nav-item dropdown">
-        <h5 data-menuanchor="VS0"><a href="#project1" class="project-link">44 Halkingcroft</a></h5>
-        <h5 data-menuanchor="VS1"><a href="#project2" class="project-link">62 Halkingcroft</a></h5>
-      </li>
+      <h5 data-menuanchor="VS0"><a href="#project1" class="project-link">44 Halkingcroft</a></h5>
+      <h5 data-menuanchor="VS1"><a href="#project2" class="project-link">62 Halkingcroft</a></h5>
       <h5 data-menuanchor="pBoro"><a href="#project3" class="project-link">Peterborough Energy Plant</a></h5>
       <h5 data-menuanchor="spaceQ1"><a href="#project4" class="project-link">Space-Q Studio Projects</a></h5>
       <h5 data-menuanchor="hydropower"><a href="#project5" class="project-link">Sandford Hydropower</a></h5>
@@ -16,7 +14,7 @@
       <h5 data-menuanchor="birla"><a href="#project8" class="project-link">Birla Corporate Office</a></h5>
     </div>
   </div>
-  <nav class="navbar navbar-dark bg-dark" id="navbar">
+  <nav class="navbar z-depth-5 navbar-dark bg-dark" id="navbar">
     <span><a href="#home" class="title-name text-white head">Vandana Sharma</a></span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
